# DRL_graph_exploration

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: plot_ave_reward.py  plot_test_step.py
data/test_result/: 40_A2C_GG-NN.csv  40_DQN_GCN.csv
data/torch_logs/A2C_GCN/: events.out.tfevents.1581732701.pc.21830.0
data/torch_logs/A2C_GG-NN/: events.out.tfevents.1581732724.pc.21900.0
data/torch_logs/A2C_g-U-Net/: events.out.tfevents.1581732744.pc.21969.0
data/torch_weights/A2C_GCN/: MyModel.pt
data/torch_weights/DQN_GCN/: MyModel.pt
include/em_exploration/: Distance.h  FastMarginals.h  OccupancyMap.h  Planner2D.h  RNG.h  SLAM2D.h  Simulation2D.h  Utils.h  VirtualMap.h
include/halton/: README.md  halton.hpp
scripts/: Networks.py  policy.py  policy_train.py  pyplanner2d.ini  pyplanner2d.py  pyss2d.py  run_training.py  test.py  train_terminal_run.py  utils.py
scripts/envs/: exploration_env.ini  exploration_env.py  pyplanner2d.py  pyss2d.ini  pyss2d.py  utils.py
src/: Planner2D.cpp  SS2D.cpp
src/em_exploration/: Distance.cpp  FastMarginals.cpp  OccupancyMap.cpp  Planner2D.cpp  SLAM2D.cpp  Simulator2D.cpp  Utils.cpp  VirtualMap.cpp
src/halton/: halton.cpp
